--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,13 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+### GRAUP ###
+
+# O gitignore é um arquivo que diz ao Git quais arquivos ou diretórios devem ser ignorados durante o processo de versionamento (commit) de um projeto.
+
+# ARQUIVOS
+*.exe
+*.mp4
+*.avi
+*.mkv
+*.bmp
+
+# PASTAS
+.nomedapasta/
